# autonomous_bicycle

./: .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: bicycle_interaction.cfg
config/: rqt_default.perspective  rqt_multiplot.xml  rqt_sensor_init.perspective  rviz_imu_gps_camera.rviz  rviz_sensor_init.rviz
docs/: useful commands.txt
include/autonomous_bicycle/: PID.h  bicycle_interaction.h  link_odometry.h
launch/: autonomous_bicycle.launch  sensor_init.launch
models/bikes_design/: model.config  model.sdf
scripts/: bicycle_interaction.py  conversions.py  gazebo2rviz.py  imu_to_angles.py  reference_imu_to_angle.py
src/: sensor_imu_publisher.py
src/classes/: ImuDriver.py
src/gazebo_plugins/: bicycle_interaction.cpp  gazebo_ros_utils.cpp  link_odometry.cpp
test/udacity_AI_robotics/: 1_1_localization.py  1_2_histogram_filter_montecarlo.py  2_1_kalman_simple.py  2_2_kalman_2D.py  2_3_kalman_4D.py  3_1_particle_filter.py  3_1_particle_filter_complete.py
worlds/: standard_bicycle.world  standard_bicycle_25_03_2017.world  standard_bicycle_31_03_2017.world
